@@ -7,3 +7,4 @@ The portable zip versions are used as update packages. You can run them standalo
 
 **Release notes for this version:**
 Fix crash for shortest path calculations when a blueprint with no grades was configured
+Handle CarrierTradeOrder events after startup
